--- a/dockerfiles/php/Dockerfile
+++ b/dockerfiles/php/Dockerfile
@@ -4,8 +4,7 @@ ADD php.ini    /usr/local/etc/php/php.ini
 ADD php-fpm.conf    /usr/local/etc/php-fpm.conf
 
 COPY redis-3.1.3.tgz /home/redis.tgz
-RUN docker-php-ext-install gd \
-    && docker-php-ext-install pdo_mysql \
+RUN docker-php-ext-install pdo_mysql \
     && pecl install /home/redis.tgz && echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
 ADD composer.phar /usr/local/bin/composer
 RUN chmod 755 /usr/local/bin/composer
