--- a/dockerfiles/nginx/Dockerfile
+++ b/dockerfiles/nginx/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginx:1.12.1
 
-ADD  nginx.conf      /etc/nginx/nginx.conf
-ADD  conf.d/*    	 /etc/nginx/conf.d/
-RUN  mkdir /opt/htdocs && mkdir /opt/log && mkdir /opt/log/nginx
-RUN  chown -R www-data.www-data /opt/htdocs /opt/log
+#ADD  nginx.conf      /etc/nginx/nginx.conf
+#ADD  conf.d/*    	 /etc/nginx/conf.d/
+#RUN  mkdir /nginx/html && mkdir /nginx/logs
+#RUN  chown -R www-data.www-data /nginx/html /nginx/logs
 
-VOLUME ["/opt"]
+VOLUME ["/nginx"]
