--- a/dockerfiles/nginx/Dockerfile
+++ b/dockerfiles/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.12.1
 
-#ADD  nginx.conf      /etc/nginx/nginx.conf
-#ADD  conf.d/*    	 /etc/nginx/conf.d/
+ADD  nginx.conf      /etc/nginx/nginx.conf
+ADD  conf.d/*.conf    	 /etc/nginx/conf.d/
 #RUN  mkdir /nginx/html && mkdir /nginx/logs
 #RUN  chown -R www-data.www-data /nginx/html /nginx/logs
 
