--- a/work/nginx/nginx.conf
+++ b/work/nginx/nginx.conf
@@ -65,7 +65,7 @@ http {
         location ~ \.php$ {
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME  /usr/loca/etc/nginx/html$fastcgi_script_name;
+            fastcgi_param  SCRIPT_FILENAME  /etc/nginx/html$fastcgi_script_name;
             include        fastcgi_params;
         }
 
