--- a/work/nginx/nginx.conf
+++ b/work/nginx/nginx.conf
@@ -63,7 +63,7 @@ http {
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
         location ~ \.php$ {
-            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_pass   php:9000;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME  /etc/nginx/html$fastcgi_script_name;
             include        fastcgi_params;
