--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,52 +7,25 @@ nginx:
       - "php71"
       - "php56"
     volumes:
-      - ~/docker-lnmp/work/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ~/docker-lnmp/work/nginx/conf.d/:/etc/nginx/conf.d/
-      - ~/docker-lnmp/work/wwwroot/:/etc/nginx/html/
-      - ~/docker-lnmp/work/nginx/log/:/var/log/nginx/
+      - /Art/docker-lnmp/work/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /Art/docker-lnmp/work/nginx/conf.d/:/etc/nginx/conf.d/
+      - /Art/docker-lnmp/work/wwwroot/:/etc/nginx/html/
+      - /Art/docker-lnmp/work/nginx/log/:/var/log/nginx/
 
 php71:
     build: ./build/php71
     ports:
       - "9071:9000"
-    links:
-      - "mysql"
-      - "redis"
     volumes:
-      - ~/docker-lnmp/work/wwwroot/:/etc/nginx/html/
-      - ~/docker-lnmp/work/php71/php.ini:/usr/local/etc/php/php.ini
-      - ~/docker-lnmp/work/php71/php-fpm.conf:/usr/local/etc/php-fpm.conf
+      - /Art/docker-lnmp/work/wwwroot/:/etc/nginx/html/
+      - /Art/docker-lnmp/work/php71/php.ini:/usr/local/etc/php/php.ini
+      - /Art/docker-lnmp/work/php71/php-fpm.conf:/usr/local/etc/php-fpm.conf
 
 php56:
     build: ./build/php56
     ports:
       - "9056:9000"
-    links:
-      - "mysql"
-      - "mongo"
     volumes:
-      - ~/docker-lnmp/work/wwwroot/:/etc/nginx/html/
-      - ~/docker-lnmp/work/php56/php.ini:/usr/local/etc/php/php.ini
-      - ~/docker-lnmp/work/php56/php-fpm.conf:/usr/local/etc/php-fpm.conf
-
-mysql:
-    build: ./build/mysql
-    ports:
-      - "3306:3306"
-    volumes:
-      - ~/docker-lnmp/work/mysql/data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: DockerLNMP
-
-redis:
-    build: ./build/redis
-    ports:
-      - "6379:6379"
-
-mongo:
-    build: ./build/mongo
-    ports:
-      - "27017:27017"
-    volumes:
-      - ~/docker-lnmp/work/mongo/data:/data/db
+      - /Art/docker-lnmp/work/wwwroot/:/etc/nginx/html/
+      - /Art/docker-lnmp/work/php56/php.ini:/usr/local/etc/php/php.ini
+      - /Art/docker-lnmp/work/php56/php-fpm.conf:/usr/local/etc/php-fpm.conf
