--- a/work/nginx/conf.d/qx_admin.dev.conf
+++ b/work/nginx/conf.d/qx_admin.dev.conf
@@ -7,5 +7,11 @@ server {
     set $root_path '/etc/nginx/html/quxiu_webroot/01-AllGameAdminPanel/';
     root $root_path;
 
+    location / {
+        if (!-e $request_filename) {
+          rewrite  ^(.*)$  /index.php?_url=$1  last;
+        }
+    }
+
     include conf.d/php56_public;
 }
