--- a/work/components/php71/config/php.ini
+++ b/work/components/php71/config/php.ini
@@ -580,7 +580,7 @@ html_errors = On
 ; empty.
 ; http://php.net/error-log
 ; Example:
-;error_log = php_errors.log
+error_log = /var/log/php_errors.log
 ; Log errors to syslog (Event Log on Windows).
 ;error_log = syslog
 
@@ -936,7 +936,7 @@ cli_server.color = On
 [Date]
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
-date.timezone = PRC
+date.timezone = "Asia/Shanghai"
 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
