优化全局配置

--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,22 @@
-############################
-# 配置信息
-############################
+####################################################################################
+# 全局配置
+####################################################################################
 
-### 应用路径
+# 容器内时区设置
+GLOBAL_TIME_ZONE=Asia/Shanghai
+
+# 是否更换源，该参数影响 apt-get、php composer 源
+GLOBAL_CHANGE_SOURCE=true
+
+# 应用路径
 # 默认你把 docker-lnmp 放到了 ~/ 家目录
 # 注意如果设置开机启动（rc.local）这里必须指定绝对路径，这是因为 rc.local 是用 root 运行的
 APP_PATH=~/docker-lnmp/
 
+
+####################################################################################
 # Mysql 配置
+####################################################################################
+
+# 密码
 MYSQL_PASSWORD=DockerLNMP
