--- a/.env-example
+++ b/.env-example
@@ -6,7 +6,7 @@
 GLOBAL_TIME_ZONE=Asia/Shanghai
 
 # 是否更换源，该参数影响 apt-get、php composer 源
-GLOBAL_CHANGE_SOURCE=true
+# GLOBAL_CHANGE_SOURCE=true
 
 # 应用路径
 # 默认你把 docker-lnmp 放到了 ~/ 家目录
