--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,71 @@
+version: '2'
 
-### Nginx 容器 #########################################
+services:
 
-nginx:
-    build: ./build/nginx
-    privileged: true
-    ports:
-      - "80:80"
-      - "443:443"
-    links:
-      - "php71"
-    volumes:
-      - ${APP_PATH}work/wwwroot:/etc/nginx/html/
-      - ${APP_PATH}work/components/nginx/config/conf.d:/etc/nginx/conf.d
-      - ${APP_PATH}work/components/nginx/log:/var/log/nginx
-    environment:
-      TIME_ZONE: ${GLOBAL_TIME_ZONE}
+  ### Nginx container #########################################
 
-### PHP 容器 #########################################
+  nginx:
+      build:
+        context: ./build/nginx
+        args:
+          TIME_ZONE: ${GLOBAL_TIME_ZONE}
+      privileged: true
+      ports:
+        - "${HTTP_PORT}:80"
+        - "${HTTPS_PORT}:443"
+      links:
+        - "php71"
+      volumes:
+        - ${GLOBAL_APP_PATH}work/wwwroot:/etc/nginx/html/
+        - ${GLOBAL_APP_PATH}work/components/nginx/config/conf.d:/etc/nginx/conf.d
+        - ${GLOBAL_APP_PATH}work/components/nginx/log:/var/log/nginx
 
-php71:
-    build: ./build/php71
-    privileged: true
-    ports:
-      - "9071:9000"
-    links:
-      - "mysql"
-      - "redis"
-    volumes:
-      - ${APP_PATH}work/wwwroot:/etc/nginx/html
-      - ${APP_PATH}work/components/php71/config/php.ini:/usr/local/etc/php/php.ini
-      - ${APP_PATH}work/components/php71/log:/var/log
-    environment:
-      TIME_ZONE: ${GLOBAL_TIME_ZONE}
+  ### PHP container #########################################
 
-### Mysql 容器 #########################################
+  php71:
+      build:
+        context: ./build/php71
+        args:
+          TIME_ZONE: ${GLOBAL_TIME_ZONE}
+          CHANGE_SOURCE: ${GLOBAL_CHANGE_SOURCE}
+      privileged: true
+      ports:
+        - "9071:9000"
+      links:
+        - "mysql"
+        - "redis"
+      volumes:
+        - ${GLOBAL_APP_PATH}work/wwwroot:/etc/nginx/html
+        - ${GLOBAL_APP_PATH}work/components/php71/config/php.ini:/usr/local/etc/php/php.ini
+        - ${GLOBAL_APP_PATH}work/components/php71/log:/var/log
 
-mysql:
-    build: ./build/mysql
-    privileged: true
-    ports:
-      - "3366:3306"
-    volumes:
-      - ${APP_PATH}work/components/mysql/data:/var/lib/mysql
-      - ${APP_PATH}work/components/mysql/config/mysql.cnf:/etc/mysql/conf.d/mysql.cnf
-      - ${APP_PATH}work/components/mysql/log/error.log:/var/log/mysql/error.log
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      TIME_ZONE: ${GLOBAL_TIME_ZONE}
+  ### Mysql container #########################################
 
-### Redis 容器 #########################################
+  mysql:
+      build:
+        context: ./build/mysql
+        args:
+          TIME_ZONE: ${GLOBAL_TIME_ZONE}
+      privileged: true
+      ports:
+        - "${MYSQL_PORT}:3306"
+      volumes:
+        - ${GLOBAL_APP_PATH}work/components/mysql/data:/var/lib/mysql
+        - ${GLOBAL_APP_PATH}work/components/mysql/config/mysql.cnf:/etc/mysql/conf.d/mysql.cnf
+        - ${GLOBAL_APP_PATH}work/components/mysql/log/error.log:/var/log/mysql/error.log
+      environment:
+        MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
 
-redis:
-    build: ./build/redis
-    privileged: true
-    ports:
-      - "6399:6379"
-    volumes:
-      - ${APP_PATH}work/components/redis/config/redis.conf:/usr/local/etc/redis/redis.conf
-      - ${APP_PATH}work/components/redis/log/redis.log:/var/log/redis/redis.log
-    environment:
-      TIME_ZONE: ${GLOBAL_TIME_ZONE}
+  ### Redis container #########################################
+
+  redis:
+      build:
+        context: ./build/redis
+        args:
+          TIME_ZONE: ${GLOBAL_TIME_ZONE}
+      privileged: true
+      ports:
+        - "${REDIS_PORT}:6379"
+      volumes:
+        - ${GLOBAL_APP_PATH}work/components/redis/config/redis.conf:/usr/local/etc/redis/redis.conf
+        - ${GLOBAL_APP_PATH}work/components/redis/log/redis.log:/var/log/redis/redis.log
