--- a/.env-example
+++ b/.env-example
@@ -1,22 +1,39 @@
 ####################################################################################
-# 全局配置
+# GLOBAL Setup
 ####################################################################################
 
-# 容器内时区设置
+# 默认你把项目放在家目录下面了
+# 注意如果设置开机启动（rc.local）这里必须指定绝对路径，这是因为 rc.local 是用 root 运行的
+GLOBAL_APP_PATH=~/docker-lnmp/
+
 GLOBAL_TIME_ZONE=Asia/Shanghai
 
-# 是否更换源，该参数影响 apt-get、php composer 源
-# GLOBAL_CHANGE_SOURCE=true
+GLOBAL_CHANGE_SOURCE=true
 
-# 应用路径
-# 默认你把 docker-lnmp 放到了 ~/ 家目录
-# 注意如果设置开机启动（rc.local）这里必须指定绝对路径，这是因为 rc.local 是用 root 运行的
-APP_PATH=~/docker-lnmp/
 
 
 ####################################################################################
-# Mysql 配置
+# HTTP Setup
 ####################################################################################
 
-# 密码
+HTTP_PORT=80
+
+HTTPS_PORT=443
+
+
+
+####################################################################################
+# Mysql Setup
+####################################################################################
+
 MYSQL_PASSWORD=DockerLNMP
+
+MYSQL_PORT=3306
+
+
+
+####################################################################################
+# Redis Setup
+####################################################################################
+
+REDIS_PORT=6379
