--- a/.env-example
+++ b/.env-example
@@ -6,6 +6,7 @@
 # 注意如果设置开机启动（rc.local）这里必须指定绝对路径，这是因为 rc.local 是用 root 运行的
 GLOBAL_APP_PATH=~/docker-lnmp/
 
+# 这里的时区不会更改 php.ini 配置里的时区，如果更改为其他时区注意检查 php.ini 的 timezone
 GLOBAL_TIME_ZONE=Asia/Shanghai
 
 GLOBAL_CHANGE_SOURCE=true
